# Odeiji_esp32

./: CMakeLists.txt  Makefile  README.md  custom_partition.csv  initial_partition_left_for_Pr_Beuchat.csv  platformio.ini  sdkconfig  sdkconfig.old
Firmware/: README.md  bluetooth.h  sdkconfig
Firmware/main/: CMakeLists.txt  ESP32APA102Driver.c  ESP32APA102Driver.h  brightness.c  brightness.h  main.c  push_buttons.c  push_buttons.h  touch_button.c  touch_button.h
Firmware/thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/: .bin_timestamp  .ninja_log  flash_app_args  rules.ninja
Firmware/thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  project_description.json
Firmware/thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/config/: sdkconfig.h  sdkconfig.json
Firmware/thread avec boutons et bluetooth/ESP32APA102Driver-master/main/: ESP32APA102Driver.h  apa102LEDStrip.c
Server/Server_functions/includes/: Constants.php  DbOperations.php  Dbconnect.php
Server/Server_functions/v1/: Firebase.php  changeEntreprise.php  findEntrepriseofuser.php  findEntreprises.php  findMeetings.php  findPoints.php  findUser.php  findidofUser.php  registerEntreprise.php  registerMeeting.php  registerPoint.php  registerUser.php  sendMultiplePush.php  sendPushtoEmployeesEntreprise.php  sendSinglePush.php  userLogin.php
include/: Utilitaires.h  bat.h  firebase.h  wifi.h
main/: CMakeLists.txt  ESP32APA102Driver.c  ESP32APA102Driver.h  ble_uart_server.c  bluetooth.c  bt_main.c  colourObject.c  main.c  push_buttons.h  touch_button.c  touch_button.h
src/: Utilitaires.h  bat.cpp  bat.h  bt.cpp  bt.h  firebase.cpp  firebase.h  led.cpp  led.h  main.cpp  rtc_wake_stub_wifi.cpp  rtc_wake_stub_wifi.h  touch.cpp  touch.h  wifi.cpp  wifi.h  workspace.code-workspace  workspace.code-workspace~
temp/: firebase.cpp
test/: ble.cpp  bt.cpp  led.cpp  oldmain.cpp  taskcpp.h
thrash/: co2wifi.cpp  esp_as_server.cpp  http_get.cpp  main.cpp  touch.cpp
thread avec boutons et bluetooth/ESP32APA102Driver-master/: sdkconfig
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/: .ninja_deps  CMakeCache.txt  build.ninja  compile_commands.json  flash_project_args  flasher_args.json  ldgen_libraries
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/bootloader/: rules.ninja
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/bootloader/config/: sdkconfig.cmake  sdkconfig.h
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/config/: sdkconfig.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/app_trace/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/efuse/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/esp32/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/esp_eth/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/esptool_py/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/expat/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/freertos/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/idf_test/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/jsmn/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/libsodium/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/lwip/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/build2/esp-idf/nghttp/: cmake_install.cmake
thread avec boutons et bluetooth/ESP32APA102Driver-master/main/: CMakeLists.txt  ESP32APA102Driver.c  apa102LEDStrip.h  colourObject.h
(+28 files in other folders)
