idf_component_register(SRCS "main.c"
                            "touch_button.c"
                            "colourObject.c"
                            "apa102LEDStrip.c"
                            "ESP32APA102Driver.c"
                            "push_buttons.c"
                    INCLUDE_DIRS "."
                    "../../esp-idf/components/bt/include/"
                    "../../esp-idf/components/esp32/include"
                    "../../esp-idf/components/freertos/include"
                    "../../esp-idf/components/log/include"
                    "../../esp-idf/components/mbedtls/mbedtls/include"
                    "../../esp-idf/components/nvs_flash/include"
                    "../../esp-idf/components/driver/include"
                    "../../esp-idf/components/spi_flash/include"
                    "../../esp-idf/components/lwip/include/apps"
                    "../../esp-idf/components/esp32"
                    "../../esp-idf/components/bt/host/bluedroid/bta/include/bta"
                    "../../esp-idf/components/bt/host/bluedroid/common/include"
                    "../../esp-idf/components/bt/common/include"
                    "../../esp-idf/components/bt/host/bluedroid/stack/include"
                    "../../esp-idf/components/bt/common/osi/include"
                    #"../../esp-idf/../xtensa-esp32-elf/xtensa-esp32-elf/include"
                    #"../../esp-idf/../xtensa-esp32-elf/lib/gcc/xtensa-esp32-elf/5.2.0/include"
                    #"../../esp-idf/components/micro-ecc/micro-ecc"
                    #"../../esp-idf/components/bt/host/bluedroid/bta/include/bta"
                    "../../esp-idf/components/bt/host/bluedroid/api/include/api"
                    )