idf_component_register(SRCS "main.c"
                            "touch_button.c"
                            "colourObject.c"
                            "apa102LEDStrip.c"
                            "ESP32APA102Driver.c"
                            "push_buttons.c"
                            "brightness.c"
                    INCLUDE_DIRS "."
                   # "../../../esp/components/bt/include/"
                    #"../../../esp/components/esp32/include"
                    #"../../../esp/components/freertos/include"
                    #"../../../esp/components/log/include"
                    #"../../../esp/components/mbedtls/mbedtls/include"
                    #"../../../esp/components/nvs_flash/include"
                    #"../../../esp/components/driver/include"
                    #"../../../esp/components/spi_flash/include"
                    #"../../../esp/components/lwip/include/apps"
                    #"../../../esp/components/esp32"
                    #"../../../esp/components/bt/host/bluedroid/bta/include/bta"
                    #"../../../esp/components/bt/host/bluedroid/common/include"
                    #"../../../esp/components/bt/common/include"
                    #"../../../esp/components/bt/host/bluedroid/stack/include"
                    #"../../../esp/components/bt/common/osi/include"
                    #"../../../esp/../xtensa-esp32-elf/xtensa-esp32-elf/include"
                    #"../../../esp/../xtensa-esp32-elf/lib/gcc/xtensa-esp32-elf/5.2.0/include"
                    #"../../../esp/components/micro-ecc/micro-ecc"
                    #"../../../esp/components/bt/host/bluedroid/bta/include/bta"
                    #"../../../esp/components/bt/host/bluedroid/api/include/api"
                    )